--- a/src/sample/GameOfLifeGui.fxml
+++ b/src/sample/GameOfLifeGui.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:controller="sample.Controller" prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <GridPane fx:id="gp_gameboard" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+      <GridPane fx:id="gp_gameboard" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" AnchorPane.rightAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -75,6 +75,6 @@
         </rowConstraints>
       </GridPane>
       <Button fx:id="btn_start" layoutX="106.0" layoutY="419.0" mnemonicParsing="false" onAction="#fillGrid" prefHeight="39.0" prefWidth="144.0" text="Start" />
-      <Button layoutX="350.0" layoutY="419.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="144.0" text="Stop" />
+      <Button fx:id="btn_stop" layoutX="350.0" layoutY="419.0" mnemonicParsing="false" onAction="#pauseGame" prefHeight="39.0" prefWidth="144.0" text="Stop" />
    </children>
 </AnchorPane>
