--- a/src/sample/GameOfLifeGui.fxml
+++ b/src/sample/GameOfLifeGui.fxml
@@ -74,7 +74,8 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Button fx:id="btn_start" layoutX="106.0" layoutY="419.0" mnemonicParsing="false" onAction="#fillGrid" prefHeight="39.0" prefWidth="144.0" text="Start" />
-      <Button fx:id="btn_stop" layoutX="350.0" layoutY="419.0" mnemonicParsing="false" onAction="#pauseGame" prefHeight="39.0" prefWidth="144.0" text="Stop" />
+      <Button fx:id="btn_stop" layoutX="382.0" layoutY="419.0" mnemonicParsing="false" onAction="#pauseGame" prefHeight="39.0" prefWidth="111.0" text="Stop" />
+      <Button fx:id="btn_start" layoutX="241.0" layoutY="419.0" mnemonicParsing="false" onAction="#fillGrid" prefHeight="39.0" prefWidth="111.0" text="Start" />
+      <Button fx:id="btn_random" layoutX="94.0" layoutY="419.0" mnemonicParsing="false" onAction="#randomCells" prefHeight="39.0" prefWidth="111.0" text="Add random cells" />
    </children>
 </AnchorPane>
